Fix letter cutoff

--- a/public/style.css
+++ b/public/style.css
@@ -48,7 +48,7 @@ img {
 
 p {
   font-size: 3.5rem;
-  line-height: 1.2;
+  line-height: 1.3;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
